[Aryan] Add: Implemented API for user login along with swagger implementation of this route and rspec testing as well
