# public/api-docs/v1/swagger.yaml
@@ -27,7 +27,7 @@ paths:
                     email:
                       type: string
                       format: email
-                      example: user@example.com
+                      example: "user@example.com"
                     password:
                       type: string
                       format: password
@@ -63,7 +63,7 @@ paths:
                       email:
                         type: string
                         format: email
-                        example: user@example.com
+                        example: "user@example.com"
                       mobile_number:
                         type: string
                         example: "+919876543210"
@@ -79,3 +79,57 @@ paths:
                     items:
                       type: string
                       example: "Validation failed: One or more fields are missing or incorrect."
+
+  /api/v1/users/login:
+    post:
+      summary: User Login
+      description: Authenticates a user and returns a JWT token.
+      tags:
+        - Authentication
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                user:
+                  type: object
+                  properties:
+                    email:
+                      type: string
+                      format: email
+                      example: "user@example.com"
+                    password:
+                      type: string
+                      format: password
+                      example: "Password@123"
+                  required:
+                    - email
+                    - password
+      responses:
+        "200":
+          description: Login successful, returns JWT token
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: "Login successful"
+                  token:
+                    type: string
+                    example: "eyJhbGciOiJIUzI1NiJ9.eyJuYW1lIjoiSm9obiBEb2UiLCJlbWFpbCI6InVzZXJAZXhhbXBsZS5jb20ifQ.signature"
+        "422":
+          description: Authentication failed (unprocessable entity)
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  errors:
+                    type: string
+                    example: "Wrong password"
+                example:
+                  errors: "Email is not registered"
